--- a/contact/templates/contacts/index.html
+++ b/contact/templates/contacts/index.html
@@ -26,7 +26,7 @@
         <h1 class="mb-4">Test Page</h1>
         <h3 class="welcome-text mb-5">Welcomes. Please leave a review</h3>
         <a href="contact/">
-            <button type="button" class="btn btn-primary">Go to review</button>
+            <button type="button" class="btn btn-primary">Go to review!</button>
         </a>
     </div>
 </body>
